Add style for search input when an icon is being used
MFIN-Data-Catalogue issue 393.

--- a/css/style.css
+++ b/css/style.css
@@ -15794,6 +15794,18 @@ h1.page-title::after, .page-title.h1::after {
   border-color: #8b5b00;
 }
 
+input.bcbb-search-submit-icon {
+  text-indent: -9999px;
+  width: 2.6em;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' shape-rendering='geometricPrecision' width='50' height='50' fill='%23fff' viewBox='0 0 16 16' opacity='1'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 60% 60%;
+}
+input.bcbb-search-submit-icon:hover, input.bcbb-search-submit-icon:focus {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' shape-rendering='geometricPrecision' width='50' height='50' fill='%23fff' viewBox='0 0 16 16' opacity='0.85'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0'/%3E%3C/svg%3E%0A");
+}
+
 ul.bcbb-inline-list {
   list-style: none;
 }
