--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -2,6 +2,8 @@
 
 .icon-bi-arrow-right-short {@include icon-bi($bi-arrow-right-short);}
 .icon-bi-arrow-right-short-after {@include icon-bi($bi-arrow-right-short,true);}
+.icon-bi-award-fill {@include icon-bi($bi-award-fill);}
+.icon-bi-award-fill-after {@include icon-bi($bi-award-fill,true);}
 .icon-bi-bookmark-dash-fill {@include icon-bi($bi-bookmark-dash-fill);}
 .icon-bi-bookmark-dash-fill-after {@include icon-bi($bi-bookmark-dash-fill,true);}
 .icon-bi-bookmark-plus {@include icon-bi($bi-bookmark-plus);}
