Increase spacing between the bottom of the logo and bottom of header
MFIN-Data-Catalogue issue 410.

--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -13491,6 +13491,9 @@ a > .ck-content code {
   border-bottom: 0.125em solid #fcba19;
   color: rgba(255, 255, 255, 0.9);
 }
+.ck-content html.bcbb-theme .bcbb-header > div {
+  padding-bottom: 1.35em;
+}
 .ck-content html.bcbb-theme main {
   color: rgba(49, 49, 50, 0.9);
 }
