--- a/scss/_html.scss
+++ b/scss/_html.scss
@@ -13,6 +13,9 @@ html.bcbb-theme {
     background-color: $colorBrand-primary;
     border-bottom: px-em(2px) solid $colorBrand-secondary;
     color: rgba($colorWhite, 0.9);
+    > div {
+      padding-bottom: 1.35em;
+    }
   }
 
   main {
