--- a/css/style.css
+++ b/css/style.css
@@ -16092,6 +16092,10 @@ ul.bb-nav-book {
   margin-right: 0;
 }
 
+.feed-icons {
+  margin-bottom: 1.5em;
+}
+
 .well {
   min-height: 20px;
   padding: 19px;
