--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -14636,6 +14636,40 @@ a > .ck-content code {
     max-width: 50%;
   }
 }
+.ck-content .bcbb-search-sidebar > details {
+  border: none;
+  margin-top: 0;
+}
+.ck-content .bcbb-search-sidebar > details > summary {
+  border-width: 0 0 1px 0;
+  background: var(--bs-gray-200);
+  border-color: var(--bs-gray-300);
+  border-radius: 0;
+  padding: 1em;
+}
+@media only screen and (min-width: 992px) {
+  .ck-content .bcbb-search-sidebar > details.block-search-api-saved-searches[open] {
+    border: 1px solid var(--bs-gray-300);
+  }
+  .ck-content .bcbb-search-sidebar > details.block-search-api-saved-searches[open] > summary {
+    list-style: none;
+    padding-left: 0;
+    padding-bottom: 0;
+    background-color: transparent;
+    pointer-events: none;
+  }
+  .ck-content .bcbb-search-sidebar > details.block-search-api-saved-searches[open] > summary::before {
+    font-family: "bootstrap-icons";
+    content: "\f525";
+    padding-right: 0.5em;
+  }
+  .ck-content .bcbb-search-sidebar > details.dc-search-filters {
+    border: none;
+  }
+  .ck-content .bcbb-search-sidebar > details.dc-search-filters > summary {
+    display: none;
+  }
+}
 .ck-content .facets-widget-links a,
 .ck-content .facets-widget-links a:active,
 .ck-content .facets-widget-links a:visited {
