--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -20,6 +20,8 @@
 .icon-bi-funnel-fill-after {@include icon-bi($bi-funnel-fill,true);}
 .icon-bi-info-circle {@include icon-bi($bi-info-circle);}
 .icon-bi-info-circle-after {@include icon-bi($bi-info-circle,true);}
+.icon-bi-list-ol {@include icon-bi($bi-list-ol);}
+.icon-bi-list-ol-after {@include icon-bi($bi-list-ol,true);}
 .icon-bi-plus-circle {@include icon-bi($bi-plus-circle);}
 .icon-bi-plus-circle-after {@include icon-bi($bi-plus-circle,true);}
 .icon-bi-printer {@include icon-bi($bi-printer);}
