--- a/scss/components/_subway.scss
+++ b/scss/components/_subway.scss
@@ -86,7 +86,7 @@ ul.bb-subway {
         }       
       }
     }
-    &.active {
+    &.active:not(:has(.active)) {
       > a {
         font-weight: bold;
         &::before {
