--- a/css/style.css
+++ b/css/style.css
@@ -15982,10 +15982,10 @@ ul.bb-subway li a .media-library-view--widget .view-header a.is-active::before,
           transform: scale(1.15, 1.15);
   background-color: #38598a;
 }
-ul.bb-subway li.active > a {
+ul.bb-subway li.active:not(:has(.active)) > a {
   font-weight: bold;
 }
-ul.bb-subway li.active > a::before {
+ul.bb-subway li.active:not(:has(.active)) > a::before {
   background-color: #38598a;
 }
 ul.bb-subway li > ul::before {
