Issue bcbb-18: Add comments to book-tree.html.twig

--- a/templates/navigation/book-tree.html.twig
+++ b/templates/navigation/book-tree.html.twig
@@ -5,6 +5,10 @@
  *
  * Based on core/modules/book/templates/book-tree.html.twig.
  *
+ * This template will not be needed after we are using the contrib book module
+ * and this issue is resolved:
+ * https://www.drupal.org/project/book/issues/3445783
+ *
  * Returns HTML for a wrapper for a book sub-tree.
  *
  * Available variables:
