Issue #20: Change font family and default size

--- a/scss/_html.scss
+++ b/scss/_html.scss
@@ -1,7 +1,7 @@
 html.bcbb-theme {
 
   body {
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    font-family: 'BCSans', 'Calibri', Arial, sans-serif;
   }
 
   img {
