--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,5 +1,5 @@
 // Typography
-// default font stack > font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+// default font stack > font-family: BC Sans, Calibri, Arial, "sans serif";
 
 @font-face {
   font-family: 'BCSans';
