--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -34,7 +34,7 @@
 }
 @media only screen and (min-width: 768px) {
   .ck-content :root {
-    --bs-body-font-size: 1.25rem !important;
+    --bs-body-font-size: 1.15rem !important;
   }
 }
 .ck-content .bcbb-theme .pagination {
@@ -13480,7 +13480,7 @@ a > .ck-content code {
   src: url("../assets/fonts/BCSans/BCSans-BoldItalic.woff2") format("woff2"), url("../assets/fonts/BCSans/BCSans-BoldItalic.woff") format("woff"); /* Modern Browsers */
 }
 .ck-content html.bcbb-theme body {
-  font-family: "BCSans", "Noto Sans", Verdana, Arial, sans-serif;
+  font-family: "BCSans", "Calibri", Arial, sans-serif;
 }
 .ck-content html.bcbb-theme img {
   max-width: 100%;
