--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 @media only screen and (min-width: 768px) {
   :root {
-    --bs-body-font-size: 1.25rem !important;
+    --bs-body-font-size: 1.15rem !important;
   }
 }
 
@@ -14461,7 +14461,7 @@ code {
   src: url("../assets/fonts/BCSans/BCSans-BoldItalic.woff2") format("woff2"), url("../assets/fonts/BCSans/BCSans-BoldItalic.woff") format("woff"); /* Modern Browsers */
 }
 html.bcbb-theme body {
-  font-family: "BCSans", "Noto Sans", Verdana, Arial, sans-serif;
+  font-family: "BCSans", "Calibri", Arial, sans-serif;
 }
 html.bcbb-theme img {
   max-width: 100%;
