--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,6 +46,7 @@
   './components/collapse',
   './components/nav_book',
   './components/buttons_links',
+  './components/nav_site',
   './components/views',
   './components/containers'
   ;
