--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -41,7 +41,7 @@ $colorTextLink-darkmode-variant: #9982ff;
 $colorCurrent: currentColor;
 
 // components
-$colorInputBorder: #959595;
+$colorInputBorder: rgb(217,217,217);
 
 // semantic colors
 $colorAlert-error: #a12622;
